--- a/src/app/open-todos/open-todos.component.html
+++ b/src/app/open-todos/open-todos.component.html
@@ -77,8 +77,11 @@
     text-align: center;
   }
 
-  .spacer {
-    flex: 1;
+  .mark-closed-checkbox {
+    cursor: pointer;
+    border: 2px solid #ddd;
+    width: 20px;
+    height: 20px;
   }
 </style>
 
@@ -96,7 +99,9 @@
   <div *ngIf="todos.length > 0">
     <div class="card" *ngFor="let todo of todos.reverse(); let i = index">
       <div><strong>{{i + 1}}.</strong> {{todo.title}}</div>
-      <div>Data</div>
+      <div>
+        <input (click)="markTodoAsClosed(todo.id)" type="checkbox" id="markAsClosed" class="mark-closed-checkbox" name="mark-closed-checkbox">
+      </div>
     </div>
   </div>
 </div>
